[package]
name = "pcd8544"
version = "0.1.7"
authors = ["Michael Watzko <michael@watzko.de>"]
repository = "https://github.com/kellerkindt/pcd8544.git"
description = "Implementation to communicate and write to PCD8544 using embedded_hal as abstraction layer. WIP"
edition = "2018"
keywords = ["embedded", "display", "lcd", "pcd8544", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"

[lib]

[dependencies]
embedded-hal = "0.2.3"
embedded-graphics = "0.6.2"

[dev-dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
rtt-target = { version = "0.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

[dev-dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"
